Added events API
